--- a/教學/sample/unitrade_Demo.ipynb
+++ b/教學/sample/unitrade_Demo.ipynb
@@ -228,7 +228,7 @@
         "print(loginresponse)\n",
         "print(f\"登入旗標{api.login_status_flag}\")\n",
         "print(f\"交易帳號{actno}\")\n",
-        "\n",
+        "time.sleep(3) #等待Colab運行3秒，讓回報先完成連線\n",
         "#下單\n",
         "order = DOrderObject() #初始化委託\n",
         "order.actno = actno #帳號\n",
