--- a/教學/sample/內期帳務範例.ipynb
+++ b/教學/sample/內期帳務範例.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%85%A7%E6%9C%9F%E5%B8%B3%E5%8B%99%E7%AF%84%E4%BE%8B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HImbuf--E6qi"
       },
       "source": [
@@ -21,13 +11,6 @@
         "# <strong>事先準備</strong>\n",
         "</div>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -56,9 +39,7 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "dRXwWXy-3Srn"
-      },
+      "metadata": {},
       "source": [
         "<div class=\"markdown-google-sans\">\n",
         "\n",
@@ -69,9 +50,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "OLS_Ufh-3Srn"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "from typing import List\n",
@@ -128,15 +107,7 @@
         "id": "yZxDgooGhqIj",
         "outputId": "94e1daba-89b2-4d53-cb38-06f4f9e9be66"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The package version is 1.0.0.1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "##API初始&登入\n",
         "import unitrade\n",
@@ -169,8 +140,7 @@
         "api.on_error = lambda error: print(f'api錯誤 {error}')\n",
         "#系統登入\n",
         "loginresponse = api.login(\n",
-        "    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
-        "\n",
+        "    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼 \n",
         "actno = api.get_accounts()[0]#取得第一個交易帳號\n",
         "#顯示登入結果\n",
         "print(loginresponse)\n",
@@ -393,6 +363,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "<div class=\"markdown-google-sans\">\n",
+        "\n",
+        "# <strong>組合申請範例(在V1.0.0.4版本開始提供)</strong>\n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#組合申請\n",
+        "combine_response = api.daccount.get_combine(\"3\",actno,\"TXO\",\"202507\",\"21000\",\"C\",\"S\",1,\"TXO\",\"202507\",\"21000\",\"P\",\"S\",1)\n",
+        "print(combine_response) "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<div class=\"markdown-google-sans\">\n",
+        "\n",
+        "# <strong>申請買賣並存沖銷</strong>\n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#申請買賣並存沖銷\n",
+        "net_response = api.daccount.get_net(actno)\n",
+        "print(net_response) "
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "lZzmMqoXHxkM"
@@ -422,7 +436,6 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": [],
       "toc_visible": true
     },
@@ -441,7 +454,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
