--- a/教學/內期行情.md
+++ b/教學/內期行情.md
@@ -282,4 +282,116 @@ unsub_ok,msg=unitrade.dquote.unsubscribe_index_data('1',index_id)
 print(f'反註冊結果 {index_id} {unsub_ok} {msg}')
 ```  
 
+## <strong>*接收即時收盤行情資料訊息含結算價及未平倉合約數(在V1.0.0.4版本開始提供)*</strong> 
+### <strong>*註冊*</strong> 
+dquote.[on_tick_data_settle]({{ "/API/dquote#on_tick_data_settle" | relative_url }})事件接收最高最低價    
+dquote.[subscribe_settle]({{ "/API/dquote#subscribe_settle" | relative_url }})方法可以註冊接收最高最低價傳入商品代碼  
 
+```python
+#訂閱接收事件
+unitrade.dquote.on_tick_data_settle = on_tick_data_settle
+#訂閱時帶商品代碼
+subok,msg=unitrade.dquote.subscribe_settle('TXFH5')
+print(f'註冊結果 {productid} {subok} {msg}') 
+``` 
+```python
+def on_tick_data_settle(tickdatasettle: DTickDataSettle):
+    print(tickdatasettle)  
+    #DTickDataSettle(
+    # commodityid='TXFH5',
+    #  period_high_price=23414.0,
+    #  period_low_price=20375.0,
+    #  daily_high_price=23406.0,
+    #  daily_low_price=22977.0,
+    #  open_price=23241.0,
+    #  last_bid_price=22990.0,
+    #  last_ask_price=22994.0,
+    #  close_price=22990.0,
+    #  total_bid_orders=68643,
+    #  total_bid_volume=106919,
+    #  total_ask_orders=66629,
+    #  total_ask_volume=109130,
+    #  total_trades=141625,
+    #  total_trade_volume=105402,
+    #  merged_bid_orders=69154,
+    #  merged_bid_volume=109064,
+    #  merged_ask_orders=67274,
+    #  merged_ask_volume=110849,
+    #  merged_volume=105411,
+    #  settlement_price=22996.0,
+    #  open_interest=95637,
+    #  block_trade_volume=0)
+```    
+### <strong>*反註冊*</strong> 
+dquote.[unsubscribe_settle]({{ "/API/dquote#unsubscribe_settle" | relative_url }})方法可以反註冊停止接收即時收盤行情資料訊息含結算價及未平倉合約數,傳入商品代碼 
+```python
+unsub_ok,msg=unitrade.dquote.unsubscribe_settle(productid)
+print(f'反註冊結果 {productid} {unsub_ok} {msg}')
+``` 
+
+## <strong>查詢收盤行情資料訊息含結算價及未平倉合約數(在V1.0.0.4版本開始提供)</strong>  
+透過dquote.[query_tick_data_settle]({{ "/API/dquote#query_tick_data_settle" | relative_url }})方法實作, 
+傳入參數:商品代碼
+回傳物件為[DTickDataSettleResponse]({{ "/API/dquote_data/#dtickdatasettleresponse-objects" | relative_url }})   
+
+以下為查詢1分K範例
+```python
+response = unitrade.dquote.query_tick_data_settle("TXFH5")
+# DTickDataSettleResponse(ok=True,
+#  error='',
+#  data=DTickDataSettle(commodityid='TXFH5',
+#  period_high_price=23414.0,
+#  period_low_price=20375.0,
+#  daily_high_price=23406.0,
+#  daily_low_price=22977.0,
+#  open_price=23241.0,
+#  last_bid_price=22990.0,
+#  last_ask_price=22994.0,
+#  close_price=22990.0,
+#  total_bid_orders=68643,
+#  total_bid_volume=106919,
+#  total_ask_orders=66629,
+#  total_ask_volume=109130,
+#  total_trades=141625,
+#  total_trade_volume=105402,
+#  merged_bid_orders=69154,
+#  merged_bid_volume=109064,
+#  merged_ask_orders=67274,
+#  merged_ask_volume=110849,
+#  merged_volume=105411,
+#  settlement_price=22996.0,
+#  open_interest=95637,
+#  block_trade_volume=0))
+``` 
+
+
+## <strong>查詢歷史K線行情(在V1.0.0.4版本開始提供)</strong>  
+透過dquote.[get_history_bardata]({{ "/API/dquote#get_history_bardata" | relative_url }})方法實作, 
+傳入參數:interval(D:日K、1K:分K). 起始日期.結束日期.商品種類.商品代碼. 取得K線數量
+
+回傳物件為[BarDataResponse]({{ "/API/dquote_data/#bardata-objects" | relative_url }})   
+
+以下為查詢1分K範例
+```python
+ response = unitrade.dquote.get_history_bardata("1K", datetime(2025, 6, 10, 0, 0, 0), datetime(2025, 7, 7, 0, 0, 0), "1", "MXFG5", 2)
+ # BarDataResponse(ok=True,
+#  error='',
+#  data=[BarData(productId='MXFG5',
+#  productkind=None,
+#  date='20250627',
+#  time='084500',
+#  open=22199.0,
+#  high=22206.0,
+#  low=22186.0,
+#  close=22191.0,
+#  volume=1608),
+#  BarData(productId='MXFG5',
+#  productkind=None,
+#  date='20250627',
+#  time='084600',
+#  open=22191.0,
+#  high=22195.0,
+#  low=22178.0,
+#  close=22187.0,
+#  volume=761)])
+``` 
