--- a/教學/外期行情.md
+++ b/教學/外期行情.md
@@ -372,3 +372,34 @@ unsub_ok,msg=unitrade.fquote.unsubscribe("CME", "NQ", "202509", "", "F")
 print(f'反註冊報價 {productid} {unsub_ok} {msg}')
 ```
  
+
+## <strong>查詢歷史K線行情(在V1.0.0.4版本開始提供)</strong>  
+透過fquote.[get_history_bardata]({{ "/API/fquote#get_history_bardata" | relative_url }})方法實作, 
+傳入參數:interval(D:日K、1K:分K). 起始日期.結束日期.商品種類.商品代碼. 取得K線數量
+
+回傳物件為[BarDataResponse]({{ "/API/fquote_data/#bardata-objects" | relative_url }})   
+
+以下為查詢1分K範例
+```python
+response = unitrade.fquote.get_history_bardata("1K", datetime(2025, 6, 10, 0, 0, 0), datetime(2025, 7, 7, 0, 0, 0), "1", "CMX", "GC", "202508", "F", "", 2)
+# BarDataResponse(ok=True,
+#  error='',
+#  data=[BarData(productId='CMX|GC|202508|F|',
+#  productkind=None,
+#  date='20250626',
+#  time='144500',
+#  open=3350.3,
+#  high=3351.1,
+#  low=3350.2,
+#  close=3350.6,
+#  volume=169),
+#  BarData(productId='CMX|GC|202508|F|',
+#  productkind=None,
+#  date='20250626',
+#  time='144600',
+#  open=3350.7,
+#  high=3351.4,
+#  low=3350.6,
+#  close=3351.3,
+#  volume=82)])
+``` 
