--- a/教學/內期帳務.md
+++ b/教學/內期帳務.md
@@ -183,6 +183,28 @@ response = unitrade.daccount.get_position(actno, 'NTT')
 #),
 #  DPosition(total_count=32, current_count=2, network_id='A00009z107', company='F008000', actno='1234567', currency='NTT', product='NYF', month='202507', call_put='', strike_price=0.0, ot_qty_b=0, ot_qty_s=42, noworder_qty_b=0, noworder_qty_s=0, nowmatch_qty_b=0, nowmatch_qty_s=0, today_close_position=0, current_buy_open_position=0, current_sell_open_position=42, combined_buy_balance=0.0, combined_sell_balance=0.0, open_buy_position_average_cost=0.0, open_sell_position_average_cost=41.4404, buyer_IAMT=0.0, seller_IAMT=1680000.0, buyer_MAMT=0.0, seller_MAMT=1302000.0, product_base_number=10000, reference_realPrice=43.82, close_position_pnl=0.0, product_name='元大台灣5007', buy_spread_points=0.0, sell_spread_points=-2.3796, floating_pnl=-999432.0, data_source_type='RT', productkind='1', productid='NYFG5')
 #  ...]) 
+```
 
+## 申請組拆功能(版本在V1.0.0.4開始提供)
+使用 daccount.[get_combine]({{ "/API/daccount#get_combine" | relative_url }}) 方法,傳入參數帳號.方式.商品內容和口數
 
-``` 
+執行後，會回傳一個 [Response]({{ "/API/daccount_data/#response-objects"| relative_url}}) 物件，回覆申請成功或失敗訊息。
+```python
+response = daccount.get_combine("3","帳號7碼","TXO","202507","21000","C","S",1,"TXO","202507","21000","P","S",1)
+# 組合成功範例:
+# Response(ok=True, error='')
+# 組合失敗範例
+# Response(ok=False, error='無此組合商品')
+```    
+
+## 申請買賣並存沖銷(版本在V1.0.0.4開始提供)
+使用 daccount.[get_net]({{ "/API/daccount#get_net" | relative_url }}) 方法查詢指定帳號
+
+執行後，會回傳一個 [Response]({{ "/API/daccount_data/#response-objects"| relative_url}}) 物件，回覆申請成功或失敗訊息。
+```python
+response = daccount.get_net("帳號7碼")
+# 申請成功範例:
+# Response(ok=True, error='') 
+# 申請失敗範例
+# Response(ok=False, error='全組或全拆筆數為零')
+```    
