--- a/教學/sample/unitrade_Demo.ipynb
+++ b/教學/sample/unitrade_Demo.ipynb
@@ -229,12 +229,16 @@
         "print(f\"登入旗標{api.login_status_flag}\")\n",
         "print(f\"交易帳號{actno}\")\n",
         "time.sleep(3) #等待Colab運行3秒，讓回報先完成連線\n",
+        "#取得大台近月商品\n",
+        "response = api.get_domestic_contracts(\"TXF\",\"F\")\n",
+        "productid = response.data[0].prod_id if response.ok else \"TXFI6\"\n",
+        "\n",
         "#下單\n",
         "order = DOrderObject() #初始化委託\n",
         "order.actno = actno #帳號\n",
         "order.note = \"ordertest\" #備註\n",
         "order.subactno = \"\" #子帳 (若無子帳則空白)\n",
-        "order.productid = \"TXFI5\" #商品代號 #預設為大台25年9月 (若契約已到期，請更改代碼，代碼請見統eVIP全球板)\n",
+        "order.productid = productid #將大台近月代碼寫入order\n",
         "order.bs = \"B\" #買賣別B/S\n",
         "order.ordertype = \"M\" #L:限價 M:市價 P:範圍市價\n",
         "order.price = 0 #委託價格 (若市價則設定0，限價請指定價格)\n",
