--- a/教學/sample/內期帳務範例.ipynb
+++ b/教學/sample/內期帳務範例.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -319,9 +319,9 @@
       "outputs": [],
       "source": [
         "# 初始數據\n",
-        "data=[['','','','','','','','','','','','','','','','','','','','','','','','','','','','','']]\n",
+        "data=[['','','','','','','','','','','','','','','','','','','','','','','','','','','','','','','']]\n",
         "dd = pd.DataFrame(data)\n",
-        "dd.columns = ['現在筆數','網路序號','公司別','帳號','幣別','商品','月份','Call Put','履約價','前日買進留倉','前日賣出留倉','本日買進委託','本日賣出委託','本日買進成交','本日賣出成交','本日平倉','目前買進留倉','目前賣出留倉','組合買進餘額','組合賣出餘額','留倉買進平均成本','留倉賣出平均成本','買方原始保證金','賣方原始保證金','買方維持保證金','賣方維持保證金','商品基數','參考即時價','平倉損益']\n",
+        "dd.columns = ['現在筆數','網路序號','公司別','帳號','幣別','商品','月份','Call Put','履約價','前日買進留倉','前日賣出留倉','本日買進委託','本日賣出委託','本日買進成交','本日賣出成交','本日平倉','目前買進留倉','目前賣出留倉','組合買進餘額','組合賣出餘額','留倉買進平均成本','留倉賣出平均成本','買方原始保證金','賣方原始保證金','買方維持保證金','賣方維持保證金','商品基數','參考即時價','平倉損益','商品代碼','商品類別']\n",
         "#查詢即時部位\n",
         "query_reply_response = api.daccount.get_position(actno, 'NTT')\n",
         "if query_reply_response.ok == True:\n",
@@ -356,6 +356,8 @@
         "        dd.loc[i,'商品基數']=data.product_base_number\n",
         "        dd.loc[i,'參考即時價']=data.reference_realPrice\n",
         "        dd.loc[i,'平倉損益']=data.close_position_pnl\n",
+        "        dd.loc[i,'商品代碼']=data.productid\n",
+        "        dd.loc[i,'商品類別']=data.productkind\n",
         "        i=i+1\n",
         "else:\n",
         "    print(query_reply_response.error)\n",
@@ -370,7 +372,7 @@
       "source": [
         "<div class=\"markdown-google-sans\">\n",
         "\n",
-        "# <strong>組合申請範例(在V1.0.0.4版本開始提供)</strong>\n",
+        "# <strong>組合申請範例(版本在V1.0.0.4開始提供)</strong>\n",
         "</div>"
       ]
     },
