--- a/教學/sample/商品取得範例.ipynb
+++ b/教學/sample/商品取得範例.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%95%86%E5%93%81%E5%8F%96%E5%BE%97%E7%AF%84%E4%BE%8B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HImbuf--E6qi"
       },
       "source": [
@@ -61,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "fIht8njLKimp"
       },
@@ -113,11 +103,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "yZxDgooGhqIj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The package version is 1.0.0.4\n"
+          ]
+        }
+      ],
       "source": [
         "##API初始&登入\n",
         "import unitrade\n",
@@ -218,9 +216,9 @@
       "outputs": [],
       "source": [
         "# 初始數據\n",
-        "data = [['','','','','','','']]\n",
+        "data = [['','','','','','','','']]\n",
         "dd = pd.DataFrame(data)\n",
-        "dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價']\n",
+        "dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價','結算日']\n",
         "query_response = api.get_domestic_contracts(\"TXF\",\"F\")#商品類別碼\n",
         "if query_response.ok == True:\n",
         "    i=0\n",
@@ -232,6 +230,7 @@
         "        dd.loc[i,'漲停價']=data.maxprice\n",
         "        dd.loc[i,'跌停價']=data.minprice\n",
         "        dd.loc[i,'參考價']=data.premium\n",
+        "        dd.loc[i,'結算日']=data.divdate\n",
         "        i=i+1\n",
         "    clear_output(wait=True)\n",
         "    display(dd)\n",
@@ -260,9 +259,9 @@
       "outputs": [],
       "source": [
         "# 初始數據\n",
-        "data = [['','','','','','','']]\n",
+        "data = [['','','','','','','','']]\n",
         "dd = pd.DataFrame(data)\n",
-        "dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價']\n",
+        "dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價','結算日']\n",
         "query_response = api.get_domestic_contracts(\"TXO\",\"O\")#商品類別碼\n",
         "if query_response.ok == True:\n",
         "    i=0\n",
@@ -274,6 +273,7 @@
         "        dd.loc[i,'漲停價']=data.maxprice\n",
         "        dd.loc[i,'跌停價']=data.minprice\n",
         "        dd.loc[i,'參考價']=data.premium\n",
+        "        dd.loc[i,'結算日']=data.divdate\n",
         "        i=i+1\n",
         "    clear_output(wait=True)\n",
         "    display(dd)\n",
@@ -379,9 +379,9 @@
       "outputs": [],
       "source": [
         "# 初始數據\n",
-        "data = [['', '', '', '', '', '', '']]\n",
+        "data = [['', '', '', '', '', '', '','','']]\n",
         "dd = pd.DataFrame(data)\n",
-        "dd.columns = ['交易所', '商品代碼', '類型(期貨:F 選擇權:O)','年月','履約價','call put', '最後交易日']\n",
+        "dd.columns = ['交易所', '商品代碼', '類型(期貨:F 選擇權:O)','年月','履約價','call put','第一通知日', '最後交易日','最後結算日']\n",
         "query_response =api.get_foreign_contracts(\"CME\",\"NQ\",\"F\")#交易所代碼,商品代碼,F:期貨O:選擇權\n",
         "if query_response.ok == True:\n",
         "    i=0\n",
@@ -392,7 +392,9 @@
         "        dd.loc[i, '年月'] = data.monthyear\n",
         "        dd.loc[i, '履約價'] = data.strikeprice\n",
         "        dd.loc[i, 'call put'] = data.cp\n",
+        "        dd.loc[i, '第一通知日'] = data.firsttradedate\n",
         "        dd.loc[i, '最後交易日'] = data.lasttradedate\n",
+        "        dd.loc[i, '最後結算日'] = data.deliverydate\n",
         "        i=i+1\n",
         "    clear_output(wait=True)\n",
         "    display(dd)\n",
@@ -430,7 +432,6 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": []
     },
     "kernelspec": {
@@ -448,7 +449,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
