--- a/教學/商品查詢.md
+++ b/教學/商品查詢.md
@@ -32,7 +32,7 @@ domestic_products = unitrade.get_domestic_products()
 #   kinid='TXF',
 #   name='臺指',
 #   stock_id='',
-#   subtype='I',
+#   subtype='I',,
 #   contract_size=200,
 #   strike_price_decimal_locator=0), 
 #  ......
@@ -57,7 +57,8 @@ query_response = unitrade.get_domestic_contracts("TXF","F")#商品類別碼
 #  stikeprice=0,
 #  maxprice=23815,
 #  minprice=19485,
-#  premium=21650),  
+#  premium=21650,
+#  divdate='20251217'),  
 # ......
 #])
 ```
@@ -82,7 +83,8 @@ query_response = unitrade.get_domestic_contracts("TXO","O")#商品類別碼
 #  stikeprice=15900,
 #  maxprice=7970,
 #  minprice=3570,
-#  premium=5770),
+#  premium=5770,
+#  divdate='20251217'),
 # ......
 #]) 
 ```
@@ -154,7 +156,9 @@ response = unitrade.get_foreign_contracts("CME", "NQ", "F")
 # monthyear='202509',
 # strikeprice='0.0000000',
 # cp='',
-# lasttradedate='20250919'),
+# lasttradedate='20250919',
+# firsttradedate='20251016',
+# deliverydate='20260321'),
 #  ...... )
 # 選擇權合約取得範例 
 response = unitrade.get_foreign_contracts("CME", "ADO", "O")
@@ -175,7 +179,9 @@ response = unitrade.get_foreign_contracts("CME", "ADO", "O")
 # monthyear='202507',
 # strikeprice='1600.0000000',
 # cp='P',
-# lasttradedate='20250703'),
+# lasttradedate='20250919',
+# firsttradedate='20251016',
+# deliverydate='20260321'),
 #  ...... )
 ```
 
