增加輔助上傳憑證檔案

--- a/教學/sample/unitrade_Demo.ipynb
+++ b/教學/sample/unitrade_Demo.ipynb
@@ -54,6 +54,8 @@
       },
       "outputs": [],
       "source": [
+        "from google.colab import files\n",
+        "import os\n",
         "# 按 Shift + Enter 執行程式碼 或 按左邊按鈕執行程式碼\n",
         "\n",
         "#============================================================#\n",
@@ -72,7 +74,26 @@
         "# 請輸入憑證密碼(非交易密碼，若未設定密碼，則刪除中文字即可)\n",
         "\n",
         "CA_PSW_KEY = \"請在此輸入憑證密碼\"\n",
-        "#============================================================#"
+        "#============================================================# \n",
+        "\n",
+        "# --- 憑證檔案上傳與設定邏輯 (自動處理 CA_NAME_KEY) ---\n",
+        "# 檢查 CA_NAME_KEY 是否為預設值或空白\n",
+        "if CA_NAME_KEY == \"請在此輸入憑證檔名(須包含副檔名.pfx)\" or not CA_NAME_KEY.strip():\n",
+        "    print(\"偵測到憑證檔名未設定或為預設值，請上傳您的憑證檔案:\")\n",
+        "    try:\n",
+        "        uploaded = files.upload()\n",
+        "        if uploaded:\n",
+        "            # 取第一個上傳的檔案名並更新 CA_NAME_KEY\n",
+        "            filename = list(uploaded.keys())[0]\n",
+        "            CA_NAME_KEY = filename\n",
+        "            print(f\"憑證檔名已自動設定為: '{CA_NAME_KEY}'\")\n",
+        "        else:\n",
+        "            print(\"沒有檔案上傳。CA_NAME_KEY 保持未設定狀態，請手動輸入或重新執行上傳。\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"檔案上傳失敗: {e}\")\n",
+        "else:\n",
+        "    print(f\"CA_NAME_KEY 已設定為: '{CA_NAME_KEY}'\")\n",
+        "# --- 憑證檔案上傳與設定邏輯結束 ---"
       ]
     },
     {
